--- a/app/src/main/res/layout/repo_view_holder.xml
+++ b/app/src/main/res/layout/repo_view_holder.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
+    android:background="?attr/colorSurface"
     android:padding="16dp">
     
     <LinearLayout
