--- a/app/src/main/res/layout/activity_github_pager.xml
+++ b/app/src/main/res/layout/activity_github_pager.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@android:color/white">
 
     <androidx.appcompat.widget.Toolbar
@@ -18,8 +19,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginTop="?attr/actionBarSize">
+        android:orientation="vertical">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/list_tabs"
@@ -35,4 +35,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
